--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -18,7 +18,7 @@ on:
         required: true
         description: 'DockerHub token'
 
-      GITHUB_TOKEN:
+      GITHUB_PACKAGES_TOKEN:
         required: true
         description: 'GitHub token'
 
@@ -98,7 +98,7 @@ jobs:
         with:
           registry: ghcr.io
           username: caido
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_PACKAGES_TOKEN }}
 
       - name: Generate Docker metadata (slim)
         id: meta-slim
