Refactor CI setup and dependency installation
- Removed unnecessary dependency verification step from
`.github/workflows/update-apt-repo.yml` and `package.json`. - Updated
the CI setup to use `bun install`. - Removed redundant
`setup:dependencies` script.

--- a/.github/workflows/update-apt-repo.yml
+++ b/.github/workflows/update-apt-repo.yml
@@ -37,8 +37,8 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install Dependencies and Verify Environment
-        run: bun run ci:setup
+      - name: Install Dependencies
+        run: bun install
 
       - name: Configure aptify GPG Key
         run: |
