--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "src/update_repo.ts",
   "type": "module",
   "scripts": {
-    "setup:dependencies": "echo 'Installing project dependencies...' && bun install && echo 'Installing Python dependencies...' && pip install aptify",
     "setup:dev-env": "node -e \"require('fs').existsSync('.env.local') || require('fs').writeFileSync('.env.local', '# Local development environment variables\\nDEBUG=true\\n')\" && echo '✅ Development environment ready!'",
     "setup": "npm run setup:dependencies && npm run setup:dev-env",
-    "verify-deps": "node -e \"const cmds = { bun: '--version', git: '--version', gpg: '--version', aptify: '--version' }; const exec = require('child_process').execSync; try { Object.keys(cmds).forEach(cmd => { console.log('Verifying ' + cmd + '...'); exec(cmd + ' ' + cmds[cmd]); }); console.log('✅ All dependencies verified!'); } catch (e) { console.error('❌ Missing dependency. Please check your setup: ' + e.message); process.exit(1); }\"",
     "repo:update": "bun run src/update_repo.ts",
     "repo:clean": "rm -rf temp_debs repo dist coverage .nyc_output *.log *.deb",
     "repo:clean-all": "npm run repo:clean && rm -rf node_modules bun.lockb",
@@ -30,9 +28,8 @@
     "health-check:json": "bun run scripts/health_check.ts --json",
     "info": "echo 'Project: Caido APT Repository' && echo 'See README.md and DEPLOYMENT.md for detailed information.'",
     "//": "--- CI/CD HOOKS ---",
-    "ci:setup": "npm run setup:dependencies && npm run verify-deps",
-    "ci:test": "npm run test:all",
-    "ci:build": "npm run ci:test && npm run repo:update"
+    "ci:test": "bun run test:all",
+    "ci:build": "bun run ci:test && npm run repo:update"
   },
   "keywords": [
     "caido",
