--- a/.github/workflows/update-apt-repo.yml
+++ b/.github/workflows/update-apt-repo.yml
@@ -37,13 +37,15 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install Bun/node Dependencies
+      - name: Install bun/node Dependencies
         run: bun install
 
-      - name: Install System Dependencies
+      - name: Install apt dependencies
         run: |
           curl -fsL https://apt.dpeckett.dev/signing_key.asc | sudo tee /etc/apt/keyrings/apt-dpeckett-dev-keyring.asc > /dev/null
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/apt-dpeckett-dev-keyring.asc] http://apt.dpeckett.dev $(. /etc/os-release && echo $VERSION_CODENAME) stable" | sudo tee /etc/apt/sources.list.d/apt-dpeckett-dev.list > /dev/null
+          sudo apt update
+          sudo apt install aptify
 
       - name: Configure aptify GPG Key
         run: |
