--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
+# APT repository binary packages
 *.deb filter=lfs diff=lfs merge=lfs -text
+
+# Large package files
+pool/**/*.deb filter=lfs diff=lfs merge=lfs -text
+packages/**/*.deb filter=lfs diff=lfs merge=lfs -text
