--- a/.github/workflows/update-apt-repo.yml
+++ b/.github/workflows/update-apt-repo.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          lfs: true
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -65,3 +66,4 @@ jobs:
           enable_jekyll: false
           commit_message: "Update APT repository - ${{ github.sha }}"
           publish_branch: gh-pages
+          lfs: true
